--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "dayjs": "^1.11.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.0"
+    "react-router-dom": "^6.8.0",
+    "react-spotify-web-playback": "^0.13.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
